--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   animated_bottom_navigation_bar: ^1.2.0
   flutter_native_splash: ^2.3.1
   flutter_launcher_icons: ^0.13.1
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
