--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,8 @@ dev_dependencies:
 flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logos/logo-no-background.png
-    - assets/logos/MWHAHAH.png
+    - assets/logos/
+    - assets/icons/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
