--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,21 +97,21 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/logos/app_icon_1024.png"
-  image_path_android: "assets/logos/app_icon_android.png"
+  image_path: "assets/logos/questify_1024.png"
+  image_path_android: "assets/logos/questify_1024.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/logos/app_icon_1024.png"
+    image_path: "assets/logos/questify_1024.png"
     background_color: "#000000"
     theme_color: "#000000"
   windows:
     generate: true
-    image_path: "assets/logos/app_icon_1024.png"
+    image_path: "assets/logos/questify_1024.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/logos/app_icon_1024.png"
+    image_path: "assets/logos/questify_1024.png"
 
 flutter_native_splash:
   # This package generates native code to customize Flutter's default white native splash screen
@@ -125,7 +125,7 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  color: "#000000"
+  color: "#181A1E"
   #background_image: "assets/background.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
@@ -133,7 +133,7 @@ flutter_native_splash:
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  image: assets/logos/MWHAHAH.png
+  image: assets/logos/questify_1152.png
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
@@ -165,7 +165,7 @@ flutter_native_splash:
     # 640 pixels in diameter.
     # App icon without an icon background: This should be 1152×1152 pixels, and fit within a circle
     # 768 pixels in diameter.
-    image: assets/logos/MWHAHAH.png
+    image: assets/logos/questify_1152.png
 
     # Splash screen background color.
     # color: "#000000"
